[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
aes-gcm-siv = "0.11.1"
serde-wasm-bindgen = "0.4"
getrandom = { version = "0.2", features = ["js"] }
libsignal-protocol = { path = "../protocol" }
libsignal-core = { path = "../core" }
poksho = { path = "../poksho" }
signal-crypto = { path = "../crypto" }
zkcredential = { path = "../zkcredential", features = ["rayon"] }
zkgroup = { path = "../zkgroup", features = [] }
